--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Shellcheck
-      run: docker run --rm -v "$PWD:/mnt" koalaman/shellcheck:v0.7.1 -P ./bin/
+      run: docker run --rm -v "$PWD:/mnt" koalaman/shellcheck:v0.7.2 ./**/*.sh
 
 
 
