--- a/.github/workflows/terragrunt-apply.yml
+++ b/.github/workflows/terragrunt-apply.yml
@@ -48,7 +48,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@master
         with:
           role-to-assume: ${{ inputs.role_arn}}
-          aws-region: ${{ inputs.region}}
+          aws-region: ${{ inputs.aws_region}}
 
       - name: Terraform Apply
         working-directory: terraform
