--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -56,7 +56,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@master
         with:
           role-to-assume: ${{ inputs.role_arn }}
-          aws-region: ${{ inputs.region}}
+          aws-region: ${{ inputs.aws_region}}
 
       - name: Terraform Plan ${{ inputs.module }}
         uses: cds-snc/terraform-plan@v3
