--- a/.github/workflows/test_inherit.yml
+++ b/.github/workflows/test_inherit.yml
@@ -2,6 +2,10 @@ name: Test inherit
 
 on:
   workflow_call:
+  pull_request:
+    paths:
+      - "terraform/**"
+      - ".github/workflows/**"
 
 env:
   MY_SECRECT: ${{ secrets.FOO }}
